# azure-fastapi

./: Dockerfile-backend  README.md  pyproject.toml
src/app/: main.py
src/app/server/cspconfig/: db.py  hardware.py
src/app/server/internal/: admin.py
src/app/server/jobmonitor/: job.py
src/app/server/routers/: home.py
